--- a/frontend-spa/package.json
+++ b/frontend-spa/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
-    "vue": "^2.7.14",
-    "element-ui": "^2.15.14"
+    "vue": "^3.4.38"
   },
   "devDependencies": {
     "vite": "^4.5.0",
-    "vite-plugin-vue2": "^2.0.3"
+    "@vitejs/plugin-vue": "^4.5.0",
+    "tailwindcss": "^3.4.13",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20",
+    "@inspira-ui/plugins": "^0.0.1",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.5.2",
+    "class-variance-authority": "^0.7.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
